--- a/Web.config
+++ b/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="ChatBotTest01" />
+    <add key="MicrosoftAppId" value="1a7d620b-79c9-423e-b928-092504622a37" />
+    <add key="MicrosoftAppPassword" value="V4AEN90gb42BrpuigZ7YKwd" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
