--- a/Bot Application1.csproj
+++ b/Bot Application1.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Models\AdditionalProperties.cs" />
     <Compile Include="Models\CardEx.cs" />
     <Compile Include="Models\MediaUrl.cs" />
+    <Compile Include="Models\NewHeroCard.cs" />
     <Compile Include="Models\ThumbnailUrl.cs" />
     <Compile Include="Models\VideoCard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
